...
    ],

    // Progression
    GameTaskType.progressionSystem: [
      'progression',
      'leveling',
      'xp',
      'experience',
      'advance',
      'unlock',
    ],
    GameTaskType.achievement: [
      'achievement',
...
    ],

    // Economy
    GameTaskType.currency: [
      'currency',
      'money',
      'gold',
      'coin',
      'elixir',
      'gem',
      'cash',
    ],
    GameTaskType.shop: [
...
